# analysis

./: .env.example  .gitignore  README.md  market-prediction-agent-spec.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml  topix_core30.json  universe_history.json
config/schemas/: audit_report.json  backtest_result.json  evidence_bundle.json  forecast_output.json  monitor_audit.json  monitor_audit_suite.json  paper_trading_batch.json  report_payload.json  retraining_event.json  risk_review.json  weekly_review.json
docs/: audit_report_spec.md  changelog_20260412.md  operations_runbook.md  spec_mapping.md
scripts/: generate_dummy_data.py  mcp_server.py  notify_audit_status.py  package_clean.py  register_scheduled_task.ps1  render_audit_report.py  run_backtest.py  run_fundamentals_live_smoke.py  run_monitor_audit.py  run_news_live_smoke.py  run_public_audit_suite.py  run_retraining_policy_replay.py  scheduled_audit.ps1  seed_public_snapshots.py  sweep_learned_weighting.py  validate_pbo_ranges.py  validate_schemas.py
src/market_prediction_agent/: __init__.py  config.py  pipeline.py
tests/: conftest.py
tests/integration/: test_five_day_horizon.py  test_pipeline.py  test_sanity.py
tests/unit/: test_audit_notifications.py  test_audit_reports.py  test_config.py  test_cpcv.py  test_data_agent_dummy.py  test_data_agent_fundamentals.py  test_data_agent_jp_equity.py  test_data_agent_news.py  test_drift.py  test_dummy_modes.py  test_event_reaction.py  test_execution.py  test_fallback.py  test_features.py  test_forecast_agent.py  test_lstm_model.py  (+27 more)
(+55 files in other folders)
